fixed height issue on ios

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -42,7 +42,7 @@ body {
   height: calc(100% - env(safe-area-inset-bottom) - 50px);
 }
 @media only screen and (min-width: 1000px) {
-  body {
+  body:not(.standalone) {
     height: calc(100% - env(safe-area-inset-bottom));
   }
 }
